# portero-agent

./: Cargo.toml  Dockerfile  README.md  agent.sh
.github/workflows/: ci.yml  docker-nightly.yml
packaging/: portero-agent.service
src/: main.rs
