[package]
name = "portero-agent"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Agent that registers a backend with Portero and renews periodically"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
jsonwebtoken = { version = "9", default-features = false, features = ["use_pem"] }
anyhow = "1"
log = "0.4"
env_logger = "0.10"
if-addrs = "0.10"
